--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ body{
 	font-size: 0.9rem;
 }
 .colors-items ul li:nth-child(4){
-	list-style-image: url('../../img/icon/icon.png');
+	list-style-image: url('../img/icon/Icon.png');
 	border-top: 0.2rem solid #000;
 	font-size: 10px;
 	padding: 0.5rem 0;
